# tinyinference

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  Makefile
examples/llama2/: CMakeLists.txt  Makefile  attention.h  config.h  llama2.cpp  llama2.h  main.cpp  sampler.h
include/: mathlib.h  tensor.h
include/encoder/: bpe.h  encoder.h
include/nn/: embedding.h  linear.h
src/: CMakeLists.txt  Makefile  mathlib.cpp  tensor.cpp
src/encoder/: bpe.cpp
src/nn/: embedding.cpp  linear.cpp
